traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:17: error: type mismatch;
 found   : Unit
 required: Boolean
  if (getDirection()== Direction.OUEST){
  ^Snake:28: error: value Ouest is not a member of object plm.universe.Direction
  if (getDirection()== Direction.Ouest){
                                 ^Snake:32: error: value Est is not a member of object plm.universe.Direction
  if (getDirection()== Direction.Est){
                                 ^