traversal.snake.Snake.scala.code
override def run() {
  baisseBrosse()
  while (!positionFinale()){
    pasDeSerpent()
  }
  
}


def positionFinale():Boolean = {
  if (!estFaceMur()) return(false);
  if (getDirection()== Direction.EST){
    gauche()
    if (estFaceMur()) return true
    else return false
  }
  if (getDirection()== Direction.OUEST){
    droite()
    if (estFaceMur()) return true
    else return false
  }
}

def pasDeSerpent(){
  while (!estFaceMur){
    avance()
  }
  if (getDirection()== Direction.Ouest){
    droite()
    avance()
    droite()
  if (getDirection()== Direction.Est){
    gauche()
    avance()
    gauche()
}
  }
}